figures orientation Core H1 H2 modifiées
+ corrections HB

--- a/bib/phd_bib.bib
+++ b/bib/phd_bib.bib
@@ -1,8 +1,96 @@
 
+@article{horton_convection_1945,
+	title = {Convection Currents in a Porous Medium},
+	volume = {16},
+	issn = {0021-8979, 1089-7550},
+	url = {https://pubs.aip.org/jap/article/16/6/367/158213/Convection-Currents-in-a-Porous-Medium},
+	doi = {10.1063/1.1707601},
+	abstract = {The problem is considered of the convection of a fluid through a permeable medium as the result of a vertical temperature-gradient, the medium being in the shape of a flat layer bounded above and below by perfectly conducting media. It appears that the minimum temperature-gradient for which convection can occur is approximately 4π2h2μ/kgρ0α D2, where h2 is the thermal diffusivity, g is the acceleration of gravity, μ is the viscosity, k is the permeability, α is the coefficient of cubical expansion, ρ0 is the density at zero temperature, and D is the thickness of the layer; this exceeds the limiting gradient found by Rayleigh for a simple fluid by a factor of 16D2/27π2kρ0. A numerical computation of this gradient, based upon the data now available, indicates that convection currents should not occur in such a geological formation as the Woodbine sand of East Texas (west of the Mexia Fault zone); in view of the fact, however, that the distribution of {NaCl} in this formation seems to require the existence of convection currents, and in view of the approximations involved in applying the present theory, it seems safe tentatively, to conclude that convection currents do exist in this formation and that the expression given above predicts excessive minimum gradients when applied to such a formation.},
+	pages = {367--370},
+	number = {6},
+	journaltitle = {Journal of Applied Physics},
+	author = {Horton, C. W. and Rogers, F. T.},
+	urldate = {2025-02-20},
+	date = {1945-06-01},
+	langid = {english},
+	file = {Horton and Rogers - 1945 - Convection Currents in a Porous Medium.pdf:C\:\\Users\\mfontbon\\Desktop\\sDrive\\Zotero\\storage\\WXKMERK8\\Horton and Rogers - 1945 - Convection Currents in a Porous Medium.pdf:application/pdf},
+}
+
+@article{richard_critere_1981,
+	title = {Critere d'apparition de la convection naturelle dans des couches poreuses stratifiees},
+	volume = {24},
+	rights = {https://www.elsevier.com/tdm/userlicense/1.0/},
+	issn = {00179310},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/0017931081901836},
+	doi = {10.1016/0017-9310(81)90183-6},
+	pages = {1325--1334},
+	number = {8},
+	journaltitle = {International Journal of Heat and Mass Transfer},
+	shortjournal = {International Journal of Heat and Mass Transfer},
+	author = {Richard, J.P. and Gounot, J.},
+	urldate = {2025-02-20},
+	date = {1981-08},
+	langid = {french},
+	file = {Richard and Gounot - 1981 - Critere d'apparition de la convection naturelle da.pdf:C\:\\Users\\mfontbon\\Desktop\\sDrive\\Zotero\\storage\\5Q7NY4WA\\Richard and Gounot - 1981 - Critere d'apparition de la convection naturelle da.pdf:application/pdf},
+}
+
+@article{kvernvold_nonlinear_1979,
+	title = {Nonlinear thermal convection in anisotropic porous media},
+	volume = {90},
+	issn = {0022-1120, 1469-7645},
+	url = {http://www.journals.cambridge.org/abstract_S0022112079002445},
+	doi = {10.1017/S0022112079002445},
+	pages = {609},
+	number = {4},
+	journaltitle = {Journal of Fluid Mechanics},
+	shortjournal = {J. Fluid Mech.},
+	author = {Kvernvold, Oddmund and Tyvand, Peder A.},
+	urldate = {2025-02-20},
+	date = {1979-02},
+	langid = {english},
+	file = {Kvernvold and Tyvand - 1979 - Nonlinear thermal convection in anisotropic porous.pdf:C\:\\Users\\mfontbon\\Desktop\\sDrive\\Zotero\\storage\\94RMTVZI\\Kvernvold and Tyvand - 1979 - Nonlinear thermal convection in anisotropic porous.pdf:application/pdf},
+}
+
+@article{drummond_laminar_1984,
+	title = {Laminar viscous flow through regular arrays of parallel solid cylinders},
+	volume = {10},
+	rights = {https://www.elsevier.com/tdm/userlicense/1.0/},
+	issn = {03019322},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/030193228490079X},
+	doi = {10.1016/0301-9322(84)90079-X},
+	pages = {515--540},
+	number = {5},
+	journaltitle = {International Journal of Multiphase Flow},
+	shortjournal = {International Journal of Multiphase Flow},
+	author = {Drummond, J.E. and Tahir, M.I.},
+	urldate = {2025-02-20},
+	date = {1984-10},
+	langid = {english},
+	file = {Drummond and Tahir - 1984 - Laminar viscous flow through regular arrays of par.pdf:C\:\\Users\\mfontbon\\Desktop\\sDrive\\Zotero\\storage\\DT45TELQ\\Drummond and Tahir - 1984 - Laminar viscous flow through regular arrays of par.pdf:application/pdf},
+}
+
+@article{shiina_critical_2010,
+	title = {Critical Rayleigh number of natural convection in high porosity anisotropic horizontal porous layers},
+	volume = {53},
+	issn = {00179310},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0017931009006450},
+	doi = {10.1016/j.ijheatmasstransfer.2009.11.045},
+	abstract = {The critical Rayleigh number {RaC} at the onset of natural convection was studied by linear stability analysis for high porosity anisotropic horizontal porous layers of uniformly arraying vertical thin circular wires stretched across a hot and a cold surface. Navier–Stokes equations including ﬂow resistance by the wires were solved since Darcy’s law cannot be applied due to high porosity. Ratio of permeability in the horizontal direction to the vertical direction is constant to be 0.5 but ratio of effective thermal diffusivity n is changed dependent on wire materials. The critical Rayleigh number {RaC} for the case of n = 1 obtained by the analysis agreed well with the experiment.},
+	pages = {1507--1513},
+	number = {7},
+	journaltitle = {International Journal of Heat and Mass Transfer},
+	shortjournal = {International Journal of Heat and Mass Transfer},
+	author = {Shiina, Yasuaki and Hishida, Makoto},
+	urldate = {2025-02-20},
+	date = {2010-03},
+	langid = {english},
+	file = {Shiina and Hishida - 2010 - Critical Rayleigh number of natural convection in .pdf:C\:\\Users\\mfontbon\\Desktop\\sDrive\\Zotero\\storage\\4MB66GXS\\Shiina and Hishida - 2010 - Critical Rayleigh number of natural convection in .pdf:application/pdf},
+}
+
 @software{DeltaEC,
   author = {Ward, Bill and Clark, John and Swift, Greg},
   title = {{Design Environment for Low-amplitude
-Thermoacoustic Energy Conversion}},
+Thermoacoustic Energy Conversion (\textsc{DeltaEC})}},
   url = {https://www.losalamosthermoacoustics.org/deltaec.html},
   version = {6.4b2.9},
   date = {2025-02-18},
