--- a/tex/DispositifExpe.tex
+++ b/tex/DispositifExpe.tex
@@ -33,7 +33,7 @@ Après avoir brièvement rappelé les bases de fonctionnement des machines therm
 \subsection{Résultats déjà obtenus}\label{chap:PresTacot_ResultatsATE}
 \echaf{Quelques résultats. À mettre dans l'intro I ?} Au démarrage de cette thèse, le réfrigérateur existe déjà et sa caractérisation est publiée \cite{ramadan_design_2021}, et fait également l'objet d'études expérimentales~\cite{ramadan_experimental_2018, ramadan_experimental_2021} et  numériques~\cite{hireche_numerical_2019, hireche_experimental_2020, baltean_gravity_2025}. 
 
-Les expériences réalisées avant le début de cette thèse sont faite en utilisant un noyau dont la porosité est $\Phi=\qty{75}{\percent}$. Il est immergé dans un mélange de gaz pressurisé à \qty{40}{\bar} et composé de \qty{70}{\percent} d'hélium et de \qty{30}{\percent} d'argon, car dans ces proportions le nombre de Prandtl du mélange est minimum \cite{belcher_working_1999}. Le modèle linéaire 1D réalisé avec le logiciel \echaf{dédié} \textsc{DeltaEC} prédit les meilleurs performances à la fréquence de résonance du système $f=\qty{47}{\hertz}$, pour laquelle la longueur d'onde vaut $\lambda=\qty{11.7}{\meter}$, validant une des hypothèse de compacité acoustique du modèle de Swift. C'est par ailleurs le seul point de fonctionnement où l'impédance électrique est supérieure à la limite basse admise par l'amplificateur, soit \qty{2}{\ohm}. Le déphasage inter-source est fixé à $\varphi_{2-1}=\ang{-60}$ pour toutes les expériences, car il s'agit de la valeur optimale d'après les simulations et ce qui est confirmé par des expériences préliminaires.
+Les expériences réalisées avant le début de cette thèse sont faite en utilisant un noyau dont la porosité est $\Phi=\qty{75}{\percent}$. Il est immergé dans un mélange de gaz pressurisé à \qty{40}{\bar} et composé de \qty{70}{\percent} d'hélium et de \qty{30}{\percent} d'argon, car dans ces proportions le nombre de Prandtl du mélange est minimum \cite{belcher_working_1999}. Le modèle linéaire 1D réalisé avec le logiciel \textsc{DeltaEC} prédit les meilleurs performances à la fréquence de résonance du système $f=\qty{47}{\hertz}$, pour laquelle la longueur d'onde vaut $\lambda=\qty{11.7}{\meter}$, validant une des hypothèse de compacité acoustique du modèle de Swift. C'est par ailleurs le seul point de fonctionnement où l'impédance électrique est supérieure à la limite basse admise par l'amplificateur, soit \qty{2}{\ohm}. Le déphasage inter-source est fixé à $\varphi_{2-1}=\ang{-60}$ pour toutes les expériences, car il s'agit de la valeur optimale d'après les simulations et ce qui est confirmé par des expériences préliminaires.
 
 Dans cet article, il est montré qu'à ces fréquence et déphasage inter-sources, et à une amplitude $DR=\nicefrac{p_1}{p_0}=\qty{3.6}{\percent}$, une puissance d'alimentation des sources $\dot W_e=\qty{193}{\watt}$ et consommée, une quantité de chaleur de $\dot Q_f=\qty{290}{\watt}$ est extraite à la source froide et la température $T_a=\qty{15}{\degreeCelsius}$ est atteinte. Le coefficient de performance à ce point de fonctionnement est $\COP=\nicefrac{\dot Q_f}{\dot W_e}=\num{1.5}$, soit \qty{15}{\percent} du coefficient de performance de Carnot.\smallskip
 
@@ -65,7 +65,7 @@ Cependant, les résultats obtenus avant le démarrage de cette thèse montrent d
 \subsubsection{Cavité thermoacoustique}
 La pompe à chaleur a été dimensionnée et fabriquée dans le cadre du projet ANR \textsc{Tacot} (ThermoAcoustic Cooler for Onroad Transportation), qui porte sur l'application d'une pompe à chaleur thermoacoustique pour la climatisation automobile \cite{ANR_thermo-acoustic_2019}. Ce projet apporte beaucoup de contraintes, dont l'une des principales est la compacité. Contrairement aux autres systèmes thermoacoustiques existant et bien plus volumineux (tels que le liquéfacteur de gaz naturel développé par Swift et Wollan au Los Alamos National Laboratory \cite{swift_thermoacoustics_2002, wollan_development_2002}, ou le réfrigérateur cryogénique thermoacoustique spatial (STAR) \cite{adeff_measurement_1991, garrett_thermoacoustic_1993}), les dimensions doivent être réduites tout en conservant un pompage de chaleur efficace. Pour cela, une géométrie coaxiale pour la cavité thermoacoustique est préférée à celle toroïdale usuellement utilisée en suivant les travaux de Poignand \textit{et al.} \cite{poignand_thermoacoustic_2011, poignand_analysis_2013}. L'ajout d'une source acoustique secondaire dans la cavité thermoacoustique permet également de gagner en compacité, en remplaçant un résonateur plus long par la masse de son équipage mobile et la souplesse de sa suspension, tel que réalisé dans les travaux de Poese \textit{et al.} \cite{poese_thermoacoustic_2004}. En plus de permettre une diminution du volume de la machine, utiliser une source secondaire offre plus de flexibilité qu'un résonateur sur la relation entre pression acoustique et vitesse particulaire, et facilite en particulier le ciblage du déphasage optimal entre pression et vitesse acoustiques au sein du noyau thermoacoustique. Un schéma général présente la géométrie de la pompe à chaleur sur la figure~\ref{fig:SchemaGeneralTACOT}, adapté de Ramadan \textit{et al.} \cite{ramadan_design_2021}. \smallskip
 
-\echaf{ajouter mention de la pression comme contrainte + tenue en pression car on a de l'hélium, introduire le mélange de gaz utilisé}
+Par ailleurs, le mélange de gaz contient de l'hélium très volatile, et qui plus est, à haute pression. La conception de la machine doit donc prendre en compte cette difficulté et l'appliquer dans le choix des dimensions du bâti, des joints toriques, et bien entendu des nombreuses traversées qui joignent l'intérieur et l'extérieur de la cavité. 
 
 \begin{figure}[!ht]
     \centering
@@ -130,12 +130,14 @@ Les axes $\mathbf e_x$ et $\mathbf e_r$ sont alors respectivement associés aux 
 %		 &= \frac{V_{\sf tot}-V_{\sf metal}}{V_{\sf tot}} \nonumber\\
 %		 &= 1 - \frac{m_{\sf metal}}{m_{\sf tot}} \label{eq:Porosite_Masse}
 \end{align}
-où $V_{\sf gaz}$ représente le volume occupé par le gaz dans le régénérateur, et $V_{\sf tot}$ le volume total du régénérateur. Ce régénérateur est différent de celui utilisé dans l'article de Ramadan \textit{et al.}~\cite{ramadan_design_2021} pour comparer les performances et le comportement du réfrigérateur si son noyau est changé \echaf{phrase à retravailler}. La masse de tissus $m_{\sf tissus}$ à utiliser pour atteindre la porosité souhaitée est déduite de cette relation et s'écrit 
+où $V_{\sf gaz}$ représente le volume occupé par le gaz dans le régénérateur, et $V_{\sf tot}$ le volume total du régénérateur. Il est à noter que ce régénérateur est différent de celui utilisé dans l'article de Ramadan \textit{et al.}~\cite{ramadan_design_2021}, car le but est de comparer les performances et le comportement du réfrigérateur dans le cas où la porosité du noyau est modifiée. 
+
+La masse de tissus $m_{\sf tissus}$ à utiliser pour atteindre la porosité souhaitée est déduite de l'équation \eqref{eq:Porosite_Volume} et s'écrit 
 
 \begin{align}
 %		 &= \frac{V_{\sf tot}-V_{\sf tissus}}{V_{\sf tot}} \nonumber\\
 %	\Phi &= 1 - \frac{m_{\sf tissus}}{m_{\sf tot}}. \label{eq:Porosite_Masse} \\
-	m_{\sf tissus} &= (1-\Phi) m_{\sf tot},
+	m_{\sf tissus} &= (1-\Phi) m_{\sf tot}, \label{eq:MasseTissus_Porosite}
 \end{align}
 où $m_{\sf tot}$ représente la masse d'un cylindre de mêmes dimensions que le régénérateur, intégralement constitué du même acier inoxydable que les tissus, soit de l'acier inoxydable 316L.
 
@@ -250,11 +252,11 @@ La chaîne d'acquisition se compose de plus de trente capteurs. Tous ne sont pas
 
 \paragraph{Pression statique} Deux capteurs (Endress, Cerabar PMP21) sont connectés sur les deux tuyaux d'alimentation en gaz de la pompe  à chaleur d'un côté, et sur une carte d'acquisition (National Instruments, NI9234) de l'autre. Les arrivées de gaz se trouvent de part et d'autre de la source acoustique principale et ont pour but d'éviter une surpression sur sa face avant ou arrière et son endommagement. Ici encore, les capteurs sont les mêmes qu'au démarrage de cette thèse.
 
-\paragraph{Puissance extraite par l'échangeur ambiant} Le fonctionnement de cet échangeur est détaillé dans l'annexe~\ref{chap:AHX}. Pour déterminer la quantité de chaleur extraite du côté ambiant du noyau, la différence de température entre l'entrée d'eau de l'échangeur et sa sortie d'eau est mesurée grâce à deux sondes de platine PT100 connectées sur une carte d'acquisition (National Instruments, NI9217). Ici, ce n'est pas l'installation matérielle qui est modifiée mais l'utilisation qui en est faite, pour améliorer la fiabilité de la mesure du flux de chaleur extrait par l'échangeur. Le détail de cette procédure est présenté en annexe~\ref{chap:AHX}.
+\paragraph{Puissance extraite par l'échangeur ambiant} Le fonctionnement de cet échangeur est détaillé dans l'annexe~\ref{chap:AHX}. Pour déterminer la quantité de chaleur extraite du côté ambiant du noyau, la différence de température entre l'entrée d'eau de l'échangeur et sa sortie d'eau est mesurée grâce à deux sondes de platine PT100 connectées sur une carte d'acquisition (National Instruments, NI9217). Ici, ce n'est pas l'installation matérielle qui est modifiée mais l'utilisation qui en est faite, pour améliorer la fiabilité de la mesure du flux de chaleur extrait par l'échangeur.
 
-\paragraph{Déplacement des sources} Le piston de chaque source acoustique est équipé d'un accéléromètre. Pour la source acoustique principale, l'accéléromètre (MMF, KS91C), déjà en place au début de cette thèse, est collé sur la face arrière. Pour la source secondaire, le capteur (PCB Piezotronics, 352C23) est collé sur la face avant, après une installation peu conventionnelle détaillée en annexe~\ref{chap:InstrumHP}. Ces capteurs sont choisis de sorte à ne pas trop varier la masse de l'équipage mobile, en particulier pour la source secondaire où la masse du piston et celle de l'ensemble accéléromètre et câble sont du même ordre de grandeur.\bigskip
+\paragraph{Déplacement des sources} Le piston de chaque source acoustique est équipé d'un accéléromètre. Pour la source acoustique principale, l'accéléromètre (MMF, KS91C), déjà en place au début de cette thèse, est collé sur la face arrière. Pour la source secondaire, le capteur (PCB Piezotronics, 352C23) est collé sur la face avant, après une installation peu conventionnelle détaillée en annexe~\ref{chap:InstrumHP}. Ces capteurs sont choisis de sorte à ne pas trop varier la masse de l'équipage mobile, en particulier pour la source secondaire où la masse du piston et celle de l'ensemble accéléromètre et câble sont du même ordre de grandeur.
 
-Toutes les connexions entre l'intérieur de la machine sous haute pression statique et l'extérieur se font via des traversées étanches. Pour les capteurs, il s'agit de HF2-8CU+16K de Spectite, dimensionnées pour \qty{550}{\bar}. Pour les sources acoustiques, une traversée FA17613 de Solid Sealing Technology est choisie, et pour la source acoustique secondaire, le modèle FA36735 du même fabricant est retenu.
+\paragraph{Traversées étanches} Toutes les connexions entre l'intérieur de la machine sous haute pression statique et l'extérieur se font via des traversées étanches. Pour les capteurs, il s'agit de HF2-8CU+16K de Spectite, dimensionnées pour \qty{550}{\bar}. Pour les sources acoustique, des traversées du frabricant Solid Sealing Technology sont retenue, avec pour la source acoustique principale le modèle FA17613, et pour la source acoustique secondaire le modèle FA36735. \echaf{materiaux pour le joint ?}
 
 %Les signaux de tensions aux bornes des sources acoustiques sont acquis par une carte d'acquisition (National Instruments, (\echaf{modèle}), après connexion à une sonde de tension (\echaf{modèle}). Deux accéléromètres (\echaf{modèle}) sont collés sur les sources pour mesurer leur déplacement. Pour connaître la pression acoustique dans la cavité thermoacoustique, quatre sondes (\echaf{modèle}) sont placées respectivement à l'arrière de la source principale, à l'arrière de la source secondaire 
 
@@ -326,8 +328,7 @@ Pour l'étude de l'influence de la gravité sur la distribution de température 
 \end{figure}
 
 \subsection{Définition des orientations}
-
-Les orientations choisies au moyen des palans sont décrites par deux angles $\psi_v$ et $\psi_h$. Le premier désigne l'angle entre l'axe horizontal et l'axe de symétrie du réfrigérateur, tandis que le second, la rotation autour de cet axe de symétrie. Les orientations utilisées dans les différentes parties de ce manuscript sont présentées sur les figures~\ref{fig:OrientationCore_H} et \ref{fig:OrientationCore_V}. Ces figures, dans lesquelles la gravité est toujours dirigée vers le bas de la page, présentent également les emplacements et les numéros d'identification des thermocouples utilisés.\medskip
+Les orientations utilisées dans les différentes parties de ce manuscrit sont présentées sur les figures~\ref{fig:OrientationCore_H} et \ref{fig:OrientationCore_V}. Ces figures, dans lesquelles la gravité est toujours dirigée vers le bas de la page, présentent également les emplacements et les numéros d'identification des thermocouples utilisés.\medskip
 
 \begin{figure}[!htp]
     \centering
@@ -408,19 +409,31 @@ Les orientations choisies au moyen des palans sont décrites par deux angles $\p
 \end{figure}
 
 
+La première orientation, nommée `\texttt{H1}' et représentée sur les figures~\ref{fig:OrientationCore_H1} et \subref{fig:OrientationCore_H1_Schema}, est la même que dans l'article dédié à la conception du réfrigérateur \cite{ramadan_design_2021}. Dans cette configuration, le \textsc{Tacot} est placé à l'horizontale comme sur la figure~\ref{fig:TACOTSuspendu_Frigo}, et les thermocouples sont placés sur un plan vertical coplanaire à la gravité. Cette orientation est celle avec laquelle tous les résultats ont été obtenus avant le démarrage de la thèse et fait donc office de référence des orientations.\smallskip
 
-La première orientation, nommée `\texttt{H1}' et représentée sur la figure~\ref{fig:OrientationCore_H1}, est la même que dans l'article dédié à la conception du réfrigérateur \cite{ramadan_design_2021}. Dans cette configuration, le \textsc{Tacot} est placé à l'horizontale comme sur la figure~\ref{fig:TACOTSuspendu_Frigo}, et les thermocouples sont placés sur un plan vertical coplanaire à la gravité. Cette orientation est celle avec laquelle tous les résultats ont été obtenus avant le démarrage de la thèse et fait donc office de référence des orientations.\smallskip
+Ensuite, la deuxième orientation est représentée sur les figures~\ref{fig:OrientationCore_H2} \subref{fig:OrientationCore_H2_Schema}. Dans ce cas, référencée en tant que `\texttt{H2}', le réfrigérateur est toujours à l'horizontale, mais pivoté autour de son axe pour placer les thermocouples sur un plan horizontal auquel la gravité est orthogonale.\smallskip
 
-Ensuite, la deuxième orientation est représentée sur la figure~\ref{fig:OrientationCore_H2}. Dans ce cas, référérencé en tant que `\texttt{H2}', le réfrigérateur est toujours à l'horizontale, mais pivoté autour de son axe pour placer les thermocouples sur un plan horizontal auquel la gravité est orthogonale.\smallskip
+L'orientation `\texttt{V1}' est affichée sur les figures~\ref{fig:OrientationCore_V1} et \subref{fig:OrientationCore_V1_Schema}. Cette configuration est radicalement différentes des deux précédentes : l'axe de symétrie du réfrigérateur est vertical, avec l'échangeur froid sous l'échangeur ambiant.\smallskip
 
-L'orientation `\texttt{V1}' est affichée sur la figure~\ref{fig:OrientationCore_V1}. Cette configuration est radicalement différentes des deux précédentes : l'axe de symétrie du réfrigérateur est vertical, avec l'échangeur froid sous l'échangeur ambiant.\smallskip
+Enfin, l'orientation `\texttt{V2}' affichée sur les figures~\ref{fig:OrientationCore_V2} et \subref{fig:OrientationCore_V2_Schema} est l'orientation inverse de la précédente. L'axe de symétrie du réfrigérateur est encore vertical, mais la source acoustique principale est cette fois au dessus du noyau thermoacoustique.\medskip
 
-Enfin, l'orientation `\texttt{V2}' affichée sur la figure~\ref{fig:OrientationCore_V2} est l'orientation inverse de la précédente. L'axe de symétrie du réfrigérateur est encore vertical, mais la source acoustique principale est cette fois au dessus du noyau thermoacoustique.\medskip
+Ces orientations correspondent à des configurations asymptotiques de convection naturelle, classiques dans la littérature concernée. Il est important de noter que les orientations `\texttt{H1}' et `\texttt{H2}' sont dans le principe une même orientation, pour laquelle le double d'information thermique peut être extrait.
 
-\echaf{rajouter ce que j'ai dit au début : quelle orientation est favorable à la conv nat ? qu'est-ce qu'on s'attend à voir ?}
+Quelques questions sont formulées, auxquelles les orientations choisies doivent permettre de répondre. 
+
+\begin{itemize}
+\item Comment se manifeste une cellule de convection naturelle ?
+\item Y a-t-il une configuration plus favorable à la mise en place d'une cellule de convection naturelle ?
+\item Peut-il y avoir un écoulement dû à la convection naturelle dans le régénérateur ?
+\item Les performances changent-elles avec la présence de convection naturelle ?
+\end{itemize}
+
+%\echaf{rajouter ce que j'ai dit au début : quelle orientation est favorable à la conv nat ? qu'est-ce qu'on s'attend à voir ?}
 
 \subsection{Acquisitions}
-\echaf{Me faire mousser car je suis "expérimentateur hors pair" ! faire voir le fait qu'il y a peu de résultats mais qu'ils sont le fruit de beaucoup d'essais pour avoir un protocole aux petits oignons et qu'on peut avoir confiance dedans} Les acquisitions sont réalisées en plusieurs temps. Tout d'abord et pour toutes les expériences,  l'état initial de toutes les grandeurs est acquis sur une minute et sauvegardé sous un label `\texttt{init}' à chaque début de journée de campagne. Cela permet de garder en mémoire toutes les conditions expérimentales initiales dont les valeurs peuvent potentiellement influer sur le comportement du réfrigérateur, comme par exemple la température ambiante ou la pression statique. \smallskip
+\echaf{Me faire mousser car je suis "expérimentateur hors pair" ! faire voir le fait qu'il y a peu de résultats mais qu'ils sont le fruit de beaucoup d'essais pour avoir un protocole aux petits oignons et qu'on peut avoir confiance dedans} Les acquisitions sont réalisées en plusieurs temps, afin de garantir des résultats exploitables et propres. Le protocole ci-après constitue la dernière itération d'une longue série d'acquisitions, dans laquelle chaque campagne comporte quelque chose rendant la mesure inexploitable.
+
+Tout d'abord et pour toutes les expériences,  l'état initial de toutes les grandeurs est acquis sur une minute et sauvegardé sous un label `\texttt{init}' à chaque début de journée de campagne. Cela permet de garder en mémoire toutes les conditions expérimentales initiales dont les valeurs peuvent potentiellement influer sur le comportement du réfrigérateur, comme par exemple la température ambiante ou la pression statique. \smallskip
 
 Ensuite, en prévision de la mesure de flux de chaleur $\dot Q_a$ extrait par l'échangeur ambiant (voir l'annexe~\ref{chap:AHX}), l'eau est préalablement mise en circulation dans cet échangeur après avoir démarré une acquisition des 30 capteurs jusqu'à stabilisation de la distribution de température dans le noyau. L'acquisition est ensuite interrompue et enregistrée avec un label `\texttt{Water}'. \echaf{ajouter figure Water pour donner une idée de la durée : température des TC et surtout écart de température des PT}\medskip
 
@@ -456,7 +469,7 @@ Pendant chaque campagne de mesure réalisée suivant le protocole \echaf{section
 
 Pour ce faire, un fichier \texttt{*.tdms} à traiter est tout d'abord chargé. Il peut alors être tronqué à un temps $t_{fin}$ souhaité pour garantir des fichiers temporels de même longueur\footnote{Sauf si un problème d'acquisition coupe l'enregistrement tout seul\dots}. Un fichier de configuration est créé, comprenant notamment l'amplitude acoustique, la tension appliquée aux cartouches de l'échangeur froid, ou l'orientation, pour ne pas perdre ces informations après ce pré-traitement des données.\smallskip
 
-Ensuite, la valeur initiales est retirée de chaque signal temporel de thermocouple. Cette valeur initiale est calculé sur les \qty{10}{\second} au début des signaux temporels, soit un nombre de points égal à $10 \times f_{e}$ où $f_{e}$ est la fréquence d'échantillonage qui vaut \qty{1651}{\hertz}.\smallskip
+Ensuite, la valeur initiales est retirée de chaque signal temporel de thermocouple. Cette valeur initiale est calculé sur les \qty{10}{\second} au début des signaux temporels, soit un nombre de points égal à $10 \times f_{e}$ où $f_{e}=\qty{1651}{\hertz}$ est la fréquence d'échantillonage.\smallskip
 
 Cette fréquence est imposée par les cartes d'acquisition de pression dynamique à tout le \texttt{vi} LabVIEW. C'est bien trop élevé, aussi bien pour les quantités non oscillantes comme la température, que les données oscillant à la fréquence $f_1=\qty{47}{\hertz}$ comme la pression dynamique ou l'accélération. Il est donc nécessaire d'alléger les données, et les températures sont ré-échantillonées à une fréquence $f_{re}=\qty{.1}{\hertz}$. De leur côté, les autres données oscillantes sont coupées pour ne conserver que les \num{20} dernières périodes entières des signaux, soit un nombre de points donné par $20 \times \nicefrac{f_e}{f_1}$.\smallskip
 
