--- a/tex/_main_.tex
+++ b/tex/_main_.tex
@@ -1,5 +1,5 @@
 %---------------------------------------------------------------------%
-\documentclass[a4paper,12pt]{book}
+\documentclass[a4paper,10pt]{book}
 %\documentclass[a4paper,12pt]{report}
 %---------------------------------------------------------------------%
 % MODIFY TEXT APPEARANCE
@@ -319,23 +319,23 @@
 	
 	Martin Fontbonne
 	
-}
+%}
     \vfill
 %        \hrule\leavevmode\\[0.3cm]
         \textbf{\'Etude de l'impact de la convection naturelle sur la distribution de température dans le noyau d'une pompe à chaleur thermoacoustique compacte coaxiale} %\\[0.65cm]
 %        \hrule
     \vfill
-{\normalsize
-	Direction de thèse : 
+%{\normalsize
+	Direction de thèse :\smallskip 
 	
-	\begin{tabular}{l l}
-	\textbf{Hélène Bailliet} & Institut Pprime, Université de Poitiers \\
-	\textbf{Jean-Christophe Valière} & Institut Pprime, Université de Poitiers \\
-	\textbf{Gaëlle Poignand} & LAUM, Le Mans Université
-	\end{tabular}
+	\begin{tblr}{rows = {12pt}, columns = {.5\textwidth, l}, column{1} = {.3\textwidth, font=\bf}}
+		Hélène Bailliet & Institut Pprime, Université de Poitiers \\
+		Jean-Christophe Valière & Institut Pprime, Université de Poitiers \\	
+		Gaëlle Poignand & LAUM, Le Mans Université
+	\end{tblr}
 	\vfill
 
-	Soutenue le \rule{2.5cm}{.5pt}
+	Soutenue le \echaf{juin 2025}
 	\vfill
 	
 	devant la Commission d'Examen
@@ -344,21 +344,21 @@
 	\textbf{\underline{JURY}}
 	\vfill
 	
-	\rule{5cm}{.5pt}
+	\rule{7cm}{.5pt}\medskip
 	
-	\rule{5cm}{.5pt}
+	\rule{7cm}{.5pt}\medskip
 	
-	\rule{5cm}{.5pt}
+	\rule{7cm}{.5pt}\medskip
 	
-	\rule{5cm}{.5pt}
+	\rule{7cm}{.5pt}\medskip
 	
-	\rule{5cm}{.5pt}
+	\rule{7cm}{.5pt}\medskip
 	
-	\rule{5cm}{.5pt}
+	\rule{7cm}{.5pt}\medskip
 	
-	\rule{5cm}{.5pt}
+	\rule{7cm}{.5pt}\medskip
 	
-	\rule{5cm}{.5pt}
+	\rule{7cm}{.5pt}\medskip
 	
 
 	
@@ -482,7 +482,7 @@
 
 \setcounter{biburllcpenalty}{7000}
 \setcounter{biburlucpenalty}{8000}
-\printbibliography[title={Bibliographie},heading=bibintoc]
+\printbibliography[title={Bibliographie}, heading=bibintoc]
 
 \clearpage
 \leavevmode
