--- a/fig/fig_OrientationCore/tex/subfig_OrientationCoreH1.tex
+++ b/fig/fig_OrientationCore/tex/subfig_OrientationCoreH1.tex
@@ -12,29 +12,40 @@
 %    \def\CoreX{1.5};
 %    \def\CoreY{.9*\LY};
 %    
-
-	\def\L{2.1};
+\def\rota{0}
+	\def\L{1};
 	\def\R{5};
 	\def\HX{.25};
 	\def\decalage{\R/2-\L/2};
 	
-		
+	\begin{scope}[yslant=-1]
+	
+		\node at (\decalage-\HX,0) (NewO) {};
+%		\draw[->, very thick] (NewO.center) -- ++(22.5+45:1.2*\R);
+%		\draw[->, very thick] (NewO.center) -- ++(0,1.2*\R);
+%		\draw[->, very thick] (NewO.center) -- ++(1.2*\R,0);
 			
 		\fill[right color=MatlabBlue,left color=MatlabOrange, draw=black] (\decalage,0) rectangle ++(\L,\R);
 		\draw[fill=MatlabOrange] (\decalage,0) rectangle ++(-\HX,\R);
 		\draw[fill=MatlabBlue] (\decalage+\L,0) rectangle ++(\HX,\R);
-
-		\foreach \z [evaluate=\z] in {0,...,4}{
+		
+			\foreach \z [evaluate=\z] in {0,...,4}{
 			\foreach \r [evaluate=\r as \num using int(\r+1 + 3*\z)] in {0,...,2}{
 				\draw ({\decalage+.5+\L-\z*(1+\L)/4},{-(\R-.4)/2*\r+\R-.2}) node[minimum size=10pt,draw,circle,fill=white,opacity=.7,text opacity=1]{} node(n\z\r){\scriptsize \num};
 }}
 
 %		\draw (n01.east) node [right]{0 $\rightarrow$ \begin{tabular}{l}Source\\acoustique\\principale\end{tabular}};
-		\draw ($(n01)+(1.5,0)$) node[minimum size=10pt,draw,circle,fill=white,opacity=.7,text opacity=1]{} node(RIX) {\scriptsize 0};% node[anchor=west]{\begin{tabular}{rl}
+		\draw ($(n01)+(.75,0)$) node[minimum size=10pt,draw,circle,fill=white,opacity=.7,text opacity=1]{} node(RIX) {\scriptsize 0};% node[anchor=west]{\begin{tabular}{rl}
 %		& Source\\
 %		$\rightarrow$ & acoustique\\
 %		& principale
 %		\end{tabular}};
-		\draw (n30.north west) node [above, fill=white, fill opacity=.7, text opacity=1]{\textcolor{MatlabOrange}{\textbf{Ambiant}}};
-		\draw (n10.north east) node [above, fill=white, fill opacity=.7, text opacity=1]{\textcolor{MatlabBlue}{\textbf{Froid}}};
+		\draw (n30.north west) node [above right, fill=white, fill opacity=.7, text opacity=1]{\textcolor{MatlabOrange}{\textbf{Ambiant}}};
+		\draw (n10.north east) node [above right, fill=white, fill opacity=.7, text opacity=1]{\textcolor{MatlabBlue}{\textbf{Froid}}};		
+	\end{scope}
+	\begin{pgfonlayer}{background}
+		\draw[->, very thick] (NewO.center) -- ++(22.5:1.2*\R);
+		\draw[->, very thick] (NewO.center) -- ++(90:1.2*\R);
+		\draw[->, very thick] (NewO.center) -- ++(-45:1.2*\R);
+  	\end{pgfonlayer}
 \end{tikzpicture}
