--- a/fig/fig_OrientationCore/tex/subfig_OrientationCoreH2.tex
+++ b/fig/fig_OrientationCore/tex/subfig_OrientationCoreH2.tex
@@ -13,7 +13,7 @@
 %    \def\CoreY{.9*\LY};
 %    
 
-	\def\L{2.1};
+	\def\L{1};
 	\def\R{5};
 	\def\HX{.25};
 	\def\decalage{\R/2-\L/2};
@@ -21,11 +21,15 @@
 %	\draw[opacity=0] (\decalage,0) rectangle ++(-\HX,\R); %%% Pour l'alignement vertical
 %\draw{[white](\L/2,0) -- ++(0,\R);
 	
-	\begin{scope}[xslant=1,yscale=.5]
+	\begin{scope}[yslant=-1]
+		\begin{scope}[xslant=.71]%, rotate=90, xscale=1]
+		\node at (\decalage-\HX,0) (NewO) {};
+%		\draw[->, very thick] (NewO.center) -- ++(0,1.2*\R);
+%		\draw[->, very thick] (NewO.center) -- ++(1.2*\R,0);
 		
-		\fill[shading=axis,right color=MatlabBlue,left color=MatlabOrange, shading angle=45, draw=black] (\decalage,0) rectangle ++(\L,\R);
-		\draw[fill=MatlabOrange] (\decalage,0) rectangle ++(-\HX,\R);
-		\draw[fill=MatlabBlue] (\decalage+\L,0) rectangle ++(\HX,\R);
+		\fill[shading=axis,right color=MatlabBlue,left color=MatlabOrange, shading angle=22.5, draw=black] (\decalage,0) rectangle ++(\L,\R*1.4);
+		\draw[fill=MatlabOrange] (\decalage,0) rectangle ++(-\HX,\R*1.4);
+		\draw[fill=MatlabBlue] (\decalage+\L,0) rectangle ++(\HX,\R*1.4);
 
 		\foreach \z [evaluate=\z] in {0,...,4}{
 			\foreach \r [evaluate=\r as \num using int(\r+1 + 3*\z)] in {0,...,2}{
@@ -33,15 +37,19 @@
 }}
 
 %		\draw (n01.east) node [right]{$\rightarrow$ \begin{tabular}{l}Source\\acoustique\\principale\end{tabular}};
-		\draw ($(n01)+(1.5,0)$) node[minimum size=10pt,draw,circle,fill=white,opacity=.7,text opacity=1]{} node {\scriptsize 0};% node[anchor=west]{\begin{tabular}{rl}
+		\draw ($(n01)+(.75,0)$) node[minimum size=10pt,draw,circle,fill=white,opacity=.7,text opacity=1]{} node {\scriptsize 0};% node[anchor=west]{\begin{tabular}{rl}
 %		& Src\\
 %		$\rightarrow$ & ac\\
 %		& princ
 %		\end{tabular}};
-		\draw (n30.north west) node [above, fill=white, fill opacity=.7, text opacity=1]{\textcolor{MatlabOrange}{\textbf{Ambiant}}};
-		\draw (n10.north east) node [above, fill=white, fill opacity=.7, text opacity=1]{\textcolor{MatlabBlue}{\textbf{Froid}}};
-	\end{scope}
-	
-	
+		\draw (n30.north west) node [above right, fill=white, fill opacity=.7, text opacity=1]{\textcolor{MatlabOrange}{\textbf{Ambiant}}};
+		\draw (n10.north east) node [above right, fill=white, fill opacity=.7, text opacity=1]{\textcolor{MatlabBlue}{\textbf{Froid}}};
 		
+	\end{scope}
+	\end{scope}
+	\begin{pgfonlayer}{background}
+		\draw[->, very thick] (NewO.center) -- ++(22.5:1.2*\R);
+		\draw[->, very thick] (NewO.center) -- ++(90:1.2*\R);
+		\draw[->, very thick] (NewO.center) -- ++(-45:1.2*\R);
+  	\end{pgfonlayer}
 \end{tikzpicture}
